# learn-physics

./: .envrc  .gitignore  .travis.yml  LICENSE  README.md  flake.nix  fourmolu.yaml  learn-physics.cabal  package.yaml  stack.yaml
examples/src/: BCircularLoop.hs  DampedOscillator.hs  ElectricFluxPlot.hs  HarmonicOscillator.hs  LorentzForceSimulation.hs  NMR.hs  PlaneWave.hs  Projectile.hs  eFieldLine2D.hs  eFieldLine3D.hs  sunEarthRK4.hs
src/Physics/: Learn.hs
src/Physics/Learn/: AdaptiveQuadrature.hs  BeamStack.hs  BlochSphere.hs  CarrotVec.hs  Charge.hs  CommonVec.hs  CompositeQuadrature.hs  CoordinateFields.hs  CoordinateSystem.hs  Current.hs  Curve.hs  Ket.hs  Mechanics.hs  Position.hs  QuantumMat.hs  RootFinding.hs  RungeKutta.hs  Schrodinger1D.hs  SimpleVec.hs  StateSpace.hs  Surface.hs  Volume.hs
src/Physics/Learn/Visual/: GlossTools.hs  PlotTools.hs  VisTools.hs
